--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     max-width: 960px;
     margin: auto;
+    color: #818181;
+    background-color: #111; /* Black */
 }
 h1 {
     font-size: 3em;
     letter-spacing: .6em;
     padding-top: 1em;
     padding-bottom: 1em;
+    margin-left: 5em;
+}
+#position {
+    margin-left: 9em;
 }
 
 h2 {
@@ -21,11 +27,11 @@ h3 {
     padding-bottom: 1em;
 }
 
-main { 
-    display: grid;
-    grid-template-columns: 50% 50%;
-    margin-top: 3em;
+#mainSide { 
+ 
+    margin-left: 0em;
 }
+
 
 header {
     text-align: center;
@@ -56,5 +62,5 @@ h1, h2, h3 {
 }
 
 #mainLeft {
-    border-right: 1px solid lightgray;
+    margin-left: 15em;
 }
