--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ h3 {
     margin-left: 2em;
 }
 
+#about{
+    color: #fff;
+}
+
 header {
     text-align: center;
     margin: auto 2em;
@@ -82,6 +86,7 @@ h2,
 h3 {
     font-weight: 100;
     margin-bottom: 0;
+    color: #fff;
 }
 
 #mainLeft {
