--- a/style.css
+++ b/style.css
@@ -1,52 +1,162 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --yangColor: #f59d62;
+  --yinColor: #111111;
+}
+
+.text-wrapper {
+  display: flex;
+  font-size: 30px;
+  font-weight: 400;
+  height : 40px;
+  justify-content: center;
+}
+
+.text-static {
+  color: #ffffff;
+}
+
+.text-dynamic {
+  margin-left: 30px;
+  line-height: 90px;
+  height: 90px;
+  overflow: hidden;
+}
+
+.text-item {
+  position: relative;
+  font-weight: 400;
+  color: var(--yangColor);
+  list-style: none;
+  top: 0;
+  animation: slide 12s steps(4) infinite;
+  align-items: center;
+}
+
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    max-width: 960px;
+    max-width: 1200px;
     margin: auto;
     color: #818181;
     background-color: #111;
     text-align: justify;
-    /* Black */
+	margin-top: 100px;
 }
 
 h1 {
-    font-size: 3em;
-    letter-spacing: .6em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    margin-left: 5em;
+    letter-spacing: .2em;
+	position: fixed;
+    top: 0;
+    z-index: 1;
+	background-color: #111;
+	width:100%;
+	max-width: 1200px;
+	text-align: center;
+	padding-left: 150px;
+	padding-top: 20px;
+}
+
+.btn{
+	background-color: var(--yangColor);
+	padding: .5em;
 }
 
 #position {
     margin-left: 9em;
+	padding-bottom: 0;
+	padding-top: 0px;
 }
+h1{
+ font-size: 45px;
+}	
 
 h2 {
-    font-size: 1.5em;
     padding-bottom: 1em;
 }
 
 h3 {
-    font-size: 1em;
     padding-bottom: 1em;
 }
 
-#highlighted {
-    color: #f59d62;
+#highlighted, #highlighted_date {
+    color: var(--yangColor);
     text-align: end;
 }
+
+#parent {
+  display: flex;
+  justify-content: space-between;
+}
+
 
 #mainSide {
     margin-left: 0em;
 }
 
-#section_contacts {
+#section_workexperience{
+    margin-left: 0;
+}
+
+#section_contacts, #section_workexperience, #section_education, #section_skills
+{
     margin-bottom: 0;
     margin-top: 0;
 }
 
+#address_details{
+  font-size: 18px;
+}
+
 #contact_details{
-    display: inline-flex;
+   display: inline-flex;
+   margin: auto;
+   align-items: center;
+   justify-content: center;
+   text-align: center; 
+   width:100%;
+   max-width: 1200px;
+}
+
+.column {
+  flex: 20%;
+  border: 1px solid #000; /* Add a border */
+  border-radius: 10px; /* Add rounded edges */
+  padding: 10px; /* Add some padding for spacing */
+  margin: 10px; /* Add margin to separate columns */
+  text-align: center; 
+  color: black;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  background-color:#aaa;
+  width: 100%;
+}
+#skills_ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+#skills_ul li {
+      width: 20%; /* Display in three columns */
+      box-sizing: border-box;
+      padding: 5px;
+    }
+	
+#e_content{
+	  text-align: justify;
 }
 
 #email, #github, #linkedln{
@@ -61,6 +171,7 @@ h3 {
 header {
     text-align: center;
     margin: auto 2em;
+	
 }
 
 section {
@@ -84,11 +195,39 @@ hr {
 h1,
 h2,
 h3 {
-    font-weight: 100;
     margin-bottom: 0;
     color: #fff;
 }
 
 #mainLeft {
     margin-left: 12em;
+}
+
+
+.text-item::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  height: 100%;
+  padding: 5px;
+  width: calc(100% + 30px);
+  border-left: 3px solid var(--yangColor);
+  background-color: var(--yinColor);
+  animation: typing 3s steps(6) infinite;
+}
+
+@keyframes typing {
+  40%,
+  60% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slide {
+  100% {
+    top: -360px;
+  }
 }
