--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   display: flex;
   font-size: 30px;
   font-weight: 400;
-  height : 40px;
+  height: 40px;
   justify-content: center;
 }
 
@@ -41,54 +41,60 @@
 }
 
 body {
-    font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    max-width: 1200px;
-    margin: auto;
-    color: #818181;
-    background-color: #111;
-    text-align: justify;
-	margin-top: 100px;
+  font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  max-width: 1400px;
+  margin: auto;
+  color: #818181;
+  background-color: #111;
+  text-align: justify;
+  margin-top: 100px;
 }
 
 h1 {
-    letter-spacing: .2em;
-	position: fixed;
-    top: 0;
-    z-index: 1;
-	background-color: #111;
-	width:100%;
-	max-width: 1200px;
-	text-align: center;
-	padding-left: 150px;
-	padding-top: 20px;
+  font-weight: 800;
+  letter-spacing: .2em;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  background-color: #111;
+  width: 100%;
+  max-width: 1400px;
+  text-align: center;
+  padding-left: 150px;
+  padding-top: 20px;
 }
 
-.btn{
-	background-color: var(--yangColor);
-	padding: .5em;
+.btn {
+  border: 2px solid var(--yangColor);
+  color: var(--yangColor);
+  padding: .5em;
 }
 
 #position {
-    margin-left: 9em;
-	padding-bottom: 0;
-	padding-top: 0px;
+  margin-left: 9em;
+  padding-bottom: 0;
+  padding-top: 0px;
 }
-h1{
- font-size: 45px;
-}	
+
+h1 {
+  font-size: 45px;
+}
 
 h2 {
-    padding-bottom: 1em;
+  padding-bottom: 1em;
+  font-size: 25px;
 }
 
 h3 {
-    padding-bottom: 1em;
+  padding-bottom: 1em;
+  font-size: 20px;
 }
 
-#highlighted, #highlighted_date {
-    color: var(--yangColor);
-    text-align: end;
+#highlighted,
+#highlighted_date {
+  color: var(--yangColor);
+  text-align: end;
 }
 
 #parent {
@@ -96,111 +102,125 @@ h3 {
   justify-content: space-between;
 }
 
-
 #mainSide {
-    margin-left: 0em;
+  margin-left: 0em;
 }
 
-#section_workexperience{
-    margin-left: 0;
+#section_workexperience {
+  margin-left: 0;
 }
 
-#section_contacts, #section_workexperience, #section_education, #section_skills
-{
-    margin-bottom: 0;
-    margin-top: 0;
+#section_contacts,
+#section_workexperience,
+#section_education,
+#section_skills {
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
-#address_details{
+#address_details {
   font-size: 18px;
 }
 
-#contact_details{
-   display: inline-flex;
-   margin: auto;
-   align-items: center;
-   justify-content: center;
-   text-align: center; 
-   width:100%;
-   max-width: 1200px;
+#contact_details {
+  display: inline-flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .column {
   flex: 20%;
-  border: 1px solid #000; /* Add a border */
-  border-radius: 10px; /* Add rounded edges */
-  padding: 10px; /* Add some padding for spacing */
-  margin: 10px; /* Add margin to separate columns */
-  text-align: center; 
+  border: 1px solid #000;
+  /* Add a border */
+  border-radius: 10px;
+  /* Add rounded edges */
+  padding: 10px;
+  /* Add some padding for spacing */
+  margin: 10px;
+  /* Add margin to separate columns */
+  text-align: center;
   color: black;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  background-color:#aaa;
+  background-color: #aaa;
   width: 100%;
 }
+
 #skills_ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-wrap: wrap;
-    }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 #skills_ul li {
-      width: 20%; /* Display in three columns */
-      box-sizing: border-box;
-      padding: 5px;
-    }
-	
-#e_content{
-	  text-align: justify;
+  width: 12%;
+  /* Display in three columns */
+  box-sizing: border-box;
+  padding: 5px;
 }
 
-#email, #github, #linkedln{
-    margin-right: 2em;
-    margin-left: 2em;
+#e_content {
+  text-align: justify;
 }
 
-#about{
-    color: #fff;
+#email,
+#github,
+#linkedln {
+  margin-right: 8em;
+  margin-left: 8em;
+
+}
+
+.fab.fa-github, .fa-envelope, .fa-linkedin {
+  color: var(--yangColor); /* Replace with your desired color */
+}
+
+#about {
+  color: #fff;
 }
 
 header {
-    text-align: center;
-    margin: auto 2em;
-	
+  text-align: center;
+  margin: auto 2em;
+
 }
 
 section {
-    margin: auto 1em 4em 2em;
+  margin: auto 1em 4em 2em;
 }
 
 i {
-    margin-right: .5em;
+  margin-right: .5em;
 }
 
 p {
-    margin: .2em auto
+  margin: .2em auto
 }
 
 hr {
-    border: none;
-    background-color: lightgray;
-    height: 1px;
+  border: none;
+  background-color: lightgray;
+  height: 1px;
 }
 
 h1,
 h2,
 h3 {
-    margin-bottom: 0;
-    color: #fff;
+  margin-bottom: 0;
+  color: #fff;
 }
 
 #mainLeft {
-    margin-left: 12em;
+  margin-left: 12em;
 }
 
 
@@ -217,10 +237,12 @@ h3 {
 }
 
 @keyframes typing {
+
   40%,
   60% {
     left: 100%;
   }
+
   100% {
     left: 0;
   }
