--- a/style.css
+++ b/style.css
@@ -1,33 +1,123 @@
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 :root {
   --yangColor: #f59d62;
   --yinColor: #111111;
 }
 
+body {
+  background-color: #111;
+  text-align: justify;
+  width: 100%;
+  padding-left: 10%;
+  padding-right: 10%;
+  color: #818181;
+  font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#address_details {
+  width: 100%;
+  padding-top: 60px;
+  text-align: center;
+}
+
+#name {
+  padding-left: 0px;
+  width: 100%;
+  text-align: center;
+  background-color: #111;
+}
+
+#mainSide {
+  text-align: center;
+  align-items: center;
+}
+
+#maskSide {
+  text-align: center;
+  align-items: center;
+}
+
+.navbar{
+  background-color: #111 !important;
+}
+
+.btn {
+  border: 2px solid var(--yangColor);
+  color: var(--yangColor);
+  padding: .5em;
+}
+
+#contactDetails{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+h1,
+h2,
+h3 {
+  margin-bottom: 0;
+  color: #fff;
+  text-align: left;;
+}
+
+h1{
+  position: fixed;
+  z-index: 1;
+}
+
+.cardBackground {
+  background-color: #111111;
+}
+.panel {
+  background-color: #111111;
+}
+
+.cardColumn {
+  background-color: #111111;
+}
+
+#expertiesHeader{
+  text-align: center;  
+  color: #fff;
+}
+
+#expertiesBody {
+  text-align: left;   
+}
+
+#expertiesBody{
+  text-align: justify;
+}
+
+.fab.fa-github, .fa-envelope, .fa-linkedin, .fa-home, .fa-researchgate, .fa-cogs, .fa-award, 
+.fa-graduation-cap, .fa-briefcase, .fa-language, .fa-address-book{
+  color: var(--yangColor); /* Replace with your desired color */
+}
+
+#reference{
+  display: inline-flex;
+}
+
+#parent {
+  display: inline;
+}
+
+#highlightedDate {
+  display: inline;
+  float: right;
+  color: var(--yangColor);
+}
+
 .text-wrapper {
   display: flex;
-  font-size: 30px;
   font-weight: 400;
-  height: 40px;
   justify-content: center;
 }
 
-.text-static {
-  color: #ffffff;
-}
-
 .text-dynamic {
-  margin-left: 30px;
-  line-height: 90px;
-  height: 90px;
+  list-style-type: none;
   overflow: hidden;
+  line-height: 30px;
+  height: 35px;
 }
 
 .text-item {
@@ -40,201 +130,20 @@
   align-items: center;
 }
 
-body {
-  font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  max-width: 1400px;
-  margin: auto;
-  color: #818181;
-  background-color: #111;
-  text-align: justify;
-  margin-top: 100px;
-}
-
-h1 {
-  font-weight: 800;
-  letter-spacing: .2em;
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  background-color: #111;
-  width: 100%;
-  max-width: 1400px;
-  text-align: center;
-  padding-left: 150px;
-  padding-top: 20px;
-}
-
-.btn {
-  border: 2px solid var(--yangColor);
-  color: var(--yangColor);
-  padding: .5em;
-}
-
-#position {
-  margin-left: 9em;
-  padding-bottom: 0;
-  padding-top: 0px;
-}
-
-h1 {
-  font-size: 45px;
-}
-
-h2 {
-  padding-bottom: 1em;
-  font-size: 25px;
-}
-
-h3 {
-  padding-bottom: 1em;
-  font-size: 20px;
-}
-
-#highlighted,
-#highlighted_date {
-  color: var(--yangColor);
-  text-align: end;
-  font-size: 18px;
-}
-
-#parent {
-  display: flex;
-  justify-content: space-between;
-}
-
-#mainSide {
-  margin-left: 0em;
-}
-
-#section_workexperience {
-  margin-left: 0;
-}
-
-#section_contacts,
-#section_workexperience,
-#section_education,
-#section_skills {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-#address_details {
-  font-size: 18px;
-}
-
-#contact_details {
-  display: inline-flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.column {
-  flex: 20%;
-  border: 1px solid #000;
-  /* Add a border */
-  border-radius: 10px;
-  /* Add rounded edges */
-  padding: 10px;
-  /* Add some padding for spacing */
-  margin: 10px;
-  /* Add margin to separate columns */
-  text-align: center;
-  color: black;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #aaa;
-  width: 100%;
-}
-
-#skills_ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#skills_ul li {
-  width: 12%;
-  /* Display in three columns */
-  box-sizing: border-box;
-  padding: 5px;
-}
-
-#e_content {
-  text-align: justify;
-}
-
-#email,
-#github,
-#linkedln {
-  margin-right: 8em;
-  margin-left: 8em;
-
-}
-
-.fab.fa-github, .fa-envelope, .fa-linkedin, .fa-home, .fa-researchgate{
-  color: var(--yangColor); /* Replace with your desired color */
-}
-
-#about {
-  color: #fff;
-}
-
-header {
-  text-align: center;
-  margin: auto 2em;
-
-}
-
-section {
-  margin: auto 1em 4em 2em;
-}
-
-i {
-  margin-right: .5em;
-}
-
-p {
-  margin: .2em auto
-}
-
-hr {
-  border: none;
-  background-color: lightgray;
-  height: 1px;
-}
-
-h1,
-h2,
-h3 {
-  margin-bottom: 0;
-  color: #fff;
-}
-
-#mainLeft {
-  margin-left: 12em;
-}
-
-
 .text-item::after {
   position: absolute;
   content: '';
   left: 0;
-  height: 100%;
-  padding: 5px;
   width: calc(100% + 30px);
   border-left: 3px solid var(--yangColor);
   background-color: var(--yinColor);
   animation: typing 3s steps(6) infinite;
+}
+
+@keyframes slide {
+  100% {
+    top: -120px;
+  }
 }
 
 @keyframes typing {
@@ -249,8 +158,3 @@ h3 {
   }
 }
 
-@keyframes slide {
-  100% {
-    top: -360px;
-  }
-}
