--- a/mobile_style.css
+++ b/mobile_style.css
@@ -8,9 +8,8 @@ body {
     border-radius: 40%;
 }
 
-
 h1 {
-    font-size: 45px;
+    font-size: 30px;
 }
 
 h2 {
@@ -19,4 +18,21 @@ h2 {
 
 h3 {
     font-size: 15px;
+}
+
+#address_details {
+    padding-top: 12%;
+}
+
+#skillsUl {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px;
+}
+
+#skillsUl li {
+    width: 25%;
+    box-sizing: border-box;
+    padding: 0px;
 }
