--- a/style.css
+++ b/style.css
@@ -13,17 +13,14 @@ body {
   font-family: 'Muli', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#address_details {
-  width: 100%;
-  padding-top: 60px;
-  text-align: center;
+#name {
+  width: 80%;
+  background-color: #111;
 }
 
-#name {
-  padding-left: 0px;
-  width: 100%;
+#rigtHeader {
   text-align: center;
-  background-color: #111;
+  display: flex;
 }
 
 #mainSide {
@@ -36,7 +33,7 @@ body {
   align-items: center;
 }
 
-.navbar{
+.navbar {
   background-color: #111 !important;
 }
 
@@ -46,7 +43,7 @@ body {
   padding: .5em;
 }
 
-#contactDetails{
+#contactDetails {
   display: flex;
   justify-content: space-evenly;
 }
@@ -56,10 +53,14 @@ h2,
 h3 {
   margin-bottom: 0;
   color: #fff;
-  text-align: left;;
 }
 
-h1{
+h2,
+h3 {
+  text-align: left;
+}
+
+h1 {
   position: fixed;
   z-index: 1;
 }
@@ -67,6 +68,7 @@ h1{
 .cardBackground {
   background-color: #111111;
 }
+
 .panel {
   background-color: #111111;
 }
@@ -75,25 +77,32 @@ h1{
   background-color: #111111;
 }
 
-#expertiesHeader{
-  text-align: center;  
+#expertiesHeader {
+  text-align: center;
   color: #fff;
 }
 
 #expertiesBody {
-  text-align: left;   
+  text-align: left;
 }
 
-#expertiesBody{
-  text-align: justify;
+
+.fab.fa-github,
+.fa-envelope,
+.fa-linkedin,
+.fa-home,
+.fa-researchgate,
+.fa-cogs,
+.fa-award,
+.fa-graduation-cap,
+.fa-briefcase,
+.fa-language,
+.fa-address-book {
+  color: var(--yangColor);
+  /* Replace with your desired color */
 }
 
-.fab.fa-github, .fa-envelope, .fa-linkedin, .fa-home, .fa-researchgate, .fa-cogs, .fa-award, 
-.fa-graduation-cap, .fa-briefcase, .fa-language, .fa-address-book{
-  color: var(--yangColor); /* Replace with your desired color */
-}
-
-#reference{
+#reference {
   display: inline-flex;
 }
 
@@ -118,6 +127,7 @@ h1{
   overflow: hidden;
   line-height: 30px;
   height: 35px;
+  padding: 0%;
 }
 
 .text-item {
@@ -157,4 +167,3 @@ h1{
     left: 0;
   }
 }
-
