--- a/desktop_style.css
+++ b/desktop_style.css
@@ -1,61 +1,3 @@
-#leftHeader {
-    width: 20%;
-}
-
-#rigtHeader {
-    width: 80%;
-}
-
-#header {
-    display: flex;
-}
-
-#address_details {
-    padding-top: 8%;
-    width: 100%;
-}
-
-#name {
-    width: 80%;
-    padding-right: 16%;
-    background-color: #111;
-}
-
-#mainBody {
-    display: flex;
-}
-
-#mainSide {
-    width: 18%;
-    position: fixed;
-    z-index: 1;
-}
-
-#maskSide {
-    width: 20%;
-}
-
-.navbar {
-    width: 80%;
-    padding-left: 15%;
-    padding-right: 0%;
-}
-
-.navbar .navbar-dark .bg-dark {
-    z-index: 0 !important;
-}
-
-#mainLeft {
-    width: 80%;
-    display: inline;
-    padding: 2%;
-}
-
-#photo {
-    width: 55%;
-    height: 5%;
-    border-radius: 40%;
-}
 
 h1 {
     font-size: 45px;
@@ -69,18 +11,12 @@ h3 {
     font-size: 20px;
 }
 
-#skillsUl {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
+h4 {
+    font-size: 20px;
 }
 
-#skillsUl li {
-    width: 20%;
-    box-sizing: border-box;
-    padding: 5px;
+
+#iam-title, #dynamic-text{
+    font-size: 20px;
 }
 
-.text-wrapper {
-    font-size: 23px;
-}
